Fix aos overflow bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
   color: var(--secondary-color);
   font-family: 'Roboto', sans-serif;
   width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
@@ -47,6 +48,7 @@ label {
   .bg-image {
     background-attachment: scroll;
   }
+
 }
 
 .glightbox-desc {
@@ -111,6 +113,12 @@ label {
   font-weight: bold;
   text-transform: uppercase;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .title-a {
+    font-size: 2rem;
+  }
 }
 
 .subtitle-a {
@@ -934,7 +942,7 @@ footer .credits a {
 .top-waves img {
   position: relative;
   display: block;
-  width: calc(120% + 1.3px);
+  width: calc(100% + 1.3px);
   height: 29px;
   transform: rotateY(180deg);
 }
